@@ -168,18 +168,20 @@ public class Feed extends DLNAResource {
 		addChild(fi);
 	}
 
+	
 	@Override
-	public boolean refreshChildren() {
-		if (System.currentTimeMillis() - lastmodified > 3600000) { // refresh every hour
-			try {
-				children.clear();
-				parse();
-			} catch (Exception e) {
-				logger.error("Error in parsing stream: " + url, e);
-			}
-			return true;
-		}
-		return false;
+	public boolean isRefreshNeeded() {
+	    return (System.currentTimeMillis() - lastmodified > 3600000);
+	}
+	
+	@Override
+	public void refreshChildren() {
+            try {
+                children.clear();
+                parse();
+            } catch (Exception e) {
+                logger.error("Error in parsing stream: " + url, e);
+            }
 	}
 
 	/**
